--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.6.1",
+    "chart.js": "^3.6.0",
+    "chartjs-adapter-luxon": "^1.1.0",
     "core-js": "^3.6.5",
+    "luxon": "^2.0.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/luxon": "^2.0.5",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -28,8 +34,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
+      "plugin:vue/vue3-essential"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
